swapped order of things/fixed look on mobile

--- a/birthday.css
+++ b/birthday.css
@@ -48,7 +48,7 @@ h5 {
 
 ol {
     font-family: Georgia, 'Times New Roman', Times, serif;
-    padding-left: 50px;
+    padding-left: 55px;
 }
 
 ul {
@@ -56,7 +56,7 @@ ul {
     margin-bottom: 0;
     padding-top: 0;
     padding-bottom: 0;
-    padding-left: 45px;
+    padding-left: 50px;
     font-family: Georgia, 'Times New Roman', Times, serif;
 }
 
